--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       </nav>
       <div id="about">
           <h2><span class="font-primary">A</span>bout</h2>
-            <img src="img/sample-pic.jpg" class="sample-pic" alt="sample-pic">
-      <div class="name">SAHARUKH SHAIKH</div>
+            <img src="img/my-pic.JPG" class="sample-pic" alt="sample-pic">
+      <div class="name">ZOUENA UWIMANA</div>
       <div class="vocation">Web Application development</div>
       <div class="skills">HTML/CSS/Javascript/React.Js/Redux/Django/Express.js</div>
       <p>
         “Learning to write programs stretches your mind, and helps you think better, creates a way of thinking about things that I think is helpful in all domains.”
       </p>
-      <div class="email">saharukh@techis.io</div>
+      <div class="email">zuenazouzou@gmail.com</div>
       <div class="icon">
-        <a href="https://github.com/Saharukhcr7" target="_blank"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/saharukh-shaikh-652b7b157/" target="_blank"><i class="bi bi-linkedin ms-3"></i></a>
+        <a href="https://github.com/Zuena-11" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/zuena-uwimana-9191a2141/" target="_blank"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
         </div>
         <div id="projects">
@@ -57,13 +57,13 @@
                 <div class="card-body">
                    <h5 class="card-title">Twitter clone</h5>
                   <p class="card-text">This is a twitter base project</p>
-                  <p class="card-text"><small class="text-muted"></small>
+                  <p class="card-text"><small class="text-muted">
                     Test Login Account<br>
                     Email: test@gmail.com<br>
                     Password: 1234
                   </small></p>
                   <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                  <a href="https://github.com/Saharukhcr7/Portfolio" target="_blank" class="btn btn-secondary">Github Link</a>
+                  <a href="https://github.com/Zuena-11" target="_blank" class="btn btn-secondary">Github Link</a>
                   
                 </div>
               </div>
@@ -83,18 +83,18 @@
                       </p>
                       <p class="card-text">
                           <small class="text-muted">
-                              Test Login Accoun <br />
+                              Test Login Account <br />
                               Email : test@gmail.com <br />
                               password : 1234
                           </small>
                       </p>
                       <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                      <a href="https://github.com/Saharukhcr7/Portfolio" target="_blank" class="btn btn-secondary">Github Link</a>
+                      <a href="https://github.com/Zuena-11" target="_blank" class="btn btn-secondary">Github Link</a>
                   </div>
               </div>
           </div>
       </div>
   </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
